--- a/NRPy+ Tutorial - Scalar Wave Equation.ipynb
+++ b/NRPy+ Tutorial - Scalar Wave Equation.ipynb
@@ -5,11 +5,90 @@
    "metadata": {},
    "source": [
     "# NRPy+ Tutorial\n",
+    "\n",
+    "## Introduction & Motivation\n",
+    "\n",
+    "NRPy+ (\"Python-based code generation for numerical relativity... and beyond!\") is a Python-based code, in which user-specified expressions in indexed notation are output as highly optimized C code. It makes extensive use of [SymPy](http://www.sympy.org) for algebraic manipulation.\n",
+    "\n",
+    "As NRPy+ was originally designed for generating C code at the heart of finite-difference-based numerical relativity codes, it contains a number of modules for solving PDEs that are useful for a large class of [hyperbolic systems of PDEs](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation), like the [scalar wave equation](https://en.wikipedia.org/wiki/Wave_equation).\n",
+    "\n",
+    "NRPy+ also contains functionality for dealing with indexed expressions. After initializing the basic infrastructure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The NRPy_param_funcs module sets up global structures that manage free parameters within NRPy+\n",
+    "import NRPy_param_funcs as par \n",
+    "# The indexedexp module defines various functions for defining and managing indexed quantities like tensors and pseudotensors\n",
+    "import indexedexp as ixp\n",
+    "# The grid module defines various parameters related to a numerical grid or the dimensionality of indexed expressions\n",
+    "# For example, it declares the parameter DIM, which specifies the dimensionality of the indexed expression\n",
+    "import grid as gri"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indexed expressions of rank 1 are stored as Python lists; rank-2 indexed expressions are stored as lists of lists; etc. In addition, the covariance (\"down\" indices) or contravariance (\"up\" indices) of indexed expressions are specified in the variable name with D's or U's, respectively. For example\n",
+    "+ the contravariant rank-1 tensor $\\beta^i$ is declared as $\\text{betaU[i]}$ in NRPy+, so that e.g., $\\text{betaU[0]}$ is stored as the SymPy variable named \"betaU0\"\n",
+    "+ the covariant rank-2 tensor $g_{ij}$ is declared as $\\text{gDD[i][j]}$ in NRPy+, so that e.g., $\\text{gDD[0][2]}$ is stored as the SymPy variable named \"gDD02\" and\n",
+    "+ the rank-2 tensor $T^{\\mu}{}_{\\nu}$ is declared as $\\text{TUD[m][n]}$ in NRPy+ (index names are of course arbitrary).\n",
+    "\n",
+    "*Caveat*: Note that it is currently up to the user to determine whether the combination of indexed expressions makes sense; NRPy+ does not track whether up and down indices are written consistently.\n",
+    "\n",
+    "NRPy+ supports symmetries in indexed expressions, so that if $h_{ij} = h_{ji}$, then declaring $\\text{hDD[i][j]}$ to be symmetric in NRPy+ will result in both $\\text{hDD[0][2]}$ and $\\text{hDD[2][0]}$ mapping to the *single* SymPy variable $hDD02$.\n",
+    "\n",
+    "To see how this works in NRPy+, let's define in NRPy+ a symmetric, rank-2 tensor $h_{ij}$ in three dimensions, and then compute the contraction, which should be given by $$con = h^{ij}h_{ij} = h_{00} h^{00} + h_{11} h^{11} + h_{22} h^{22} + 2 (h_{01} h^{01} + h_{02} h^{02} + h_{12} h^{12})$$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hDD00*hUU00 + 2*hDD01*hUU01 + 2*hDD02*hUU02 + hDD11*hUU11 + 2*hDD12*hUU12 + hDD22*hUU22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the dimension to 3\n",
+    "par.set_parval_from_str(\"DIM\",3)\n",
+    "\n",
+    "# Get the dimension we just set.\n",
+    "DIM = par.parval_from_str(\"DIM\")\n",
+    "\n",
+    "# Declare h_{ij}=hUU[i][j] and h^{ij}=hDD[i][j]\n",
+    "hUU = ixp.declarerank2(\"hUU\",\"sym12\")\n",
+    "hDD = ixp.declarerank2(\"hDD\",\"sym12\")\n",
+    "\n",
+    "# Perform sum h^{ij} h_{ij}, initializing contraction result to zero\n",
+    "con = 0\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        con += hUU[i][j]*hDD[i][j]\n",
+    "\n",
+    "# Print result\n",
+    "print(con)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 1: Generating C code to solve the scalar wave equation, in Cartesian coordinates\n",
     "\n",
     "### Problem Statement\n",
     "\n",
-    "Suppose we wish to numerically solve the scalar wave equation in Cartesian coordinates:\n",
+    "We wish to numerically solve the scalar wave equation in Cartesian coordinates:\n",
     "$$\\partial_t^2 u = c^2 \\nabla^2 u \\text{,}$$\n",
     "where $u$ is a function of time and space: $u = u(t,x,y,...)$ (spatial dimension as-yet unspecified) and $c$ is the wave speed,\n",
     "\n",
@@ -21,7 +100,7 @@
     "Define \n",
     "$$v(t,x,y,...) = \\partial_t u(t,x,y,...)$$\n",
     "\n",
-    "Then the second-order PDE is reduced to a set of two coupled first-order PDEs\n",
+    "In this way, the second-order PDE is reduced to a set of two coupled first-order PDEs\n",
     "\n",
     "\\begin{align}\n",
     "\\partial_t u &= v \\\\\n",
@@ -31,18 +110,21 @@
     "\n",
     "### Numerical Solution to the Wave Equation \n",
     "\n",
-    "We will find that breaking the second-order time derivative into two first-order, coupled equations is quite convenient numerically, as it enables us to step forward in time using, e.g., RK4, using the Method of Lines. As for the $\\nabla^2 u$ term, spatial derivatives are handled in NRPy+ via finite differencing.\n",
+    "We will find that breaking the second-order time derivative into two first-order, coupled equations in this way is quite convenient numerically, as it enables us to step forward in time using the Method of Lines. This method enables us to handle timestepping the same way we would handle an ODE integration, allowing us to use [Runge-Kutta methods](https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods) for timestepping. \n",
+    "\n",
+    "As for the $\\nabla^2 u$ term, spatial derivatives are handled in NRPy+ via [finite differencing](https://en.wikipedia.org/wiki/Finite_difference).\n",
     "\n",
     "We will sample the solution $\\{u,v\\}$ at discrete, uniformly-sampled points in space and time For simplicity, let's assume that we consider the wave equation in one spatial dimension. Then the solution at any sampled point in space and time is given by\n",
     "$$u^n_i = u(t_n,x_i) = u(t_0 + n \\Delta t, x_0 + i \\Delta x),$$\n",
-    "where $\\Delta t$ and $\\Delta x$ represent the temporal and spatial resolution, respectively. $v^n_i$ is sampled identically in space and time.\n",
+    "where $\\Delta t$ and $\\Delta x$ represent the temporal and spatial resolution, respectively. $v^n_i$ is sampled at the same points in space and time.\n",
     "\n",
-    "#### Spatial Derivatives\n",
+    "#### Spatial Derivatives: the $\\nabla^2$ Operator\n",
     "\n",
-    "In one spatial dimension,\n",
+    "To minimize complication, we will restrict ourselves to solving the wave equation in one spatial dimension, so\n",
     "$$\\nabla^2 u = \\partial_x^2 u.$$\n",
+    "Extension of this operator to higher spatial dimensions is straightforward, particularly when using NRPy+.\n",
     "\n",
-    "We wish to approximate this derivative using finite difference (FD) techniques. Usually, FD techniques are equivalent to first finding the unique $N$th degree polynomial to $N+1$ sampled points of our function ($u$), and then using the derivative of the polynomial as an approximate derivative of $u$. The approximation error generally decreases as the polynomial degree or sampling density increases.\n",
+    "We wish to approximate this derivative using [finite difference](https://en.wikipedia.org/wiki/Finite_difference). (FD) techniques. FD techniques are usually equivalent to first finding the unique $N$th degree polynomial that passes through $N+1$ sampled points of our function ($u$) in the neighborhood of where we wish to find the derivative. Then, provided $u$ is smooth and properly-sampled the derivative of the polynomial is an approximate derivative of $u$. The approximation error generally decreases as the polynomial degree or sampling density increases.\n",
     "\n",
     "Finite difference derivatives are written in the form\n",
     "$$\\left[\\partial_x u\\right]_i = \\sum_{j} \\left(u_j\\right) a_j,$$\n",
@@ -74,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -96,43 +180,20 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1_i1_i2/3 - uu_i0m2_i1_i2/12 + 4*uu_i0p1_i1_i2/3 - uu_i0p2_i1_i2/12),\n",
-      " *    const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5*uu/2 + 4*uu_i0_i1m1_i2/3 - uu_i0_i1m2_i2/12 + 4*uu_i0_i1p1_i2/3 - uu_i0_i1p2_i2/12),\n",
-      " *    const REAL_SIMD_ARRAY uu_dDD22 = invdx2**2*(-5*uu/2 + 4*uu_i0_i1_i2m1/3 - uu_i0_i1_i2m2/12 + 4*uu_i0_i1_i2p1/3 - uu_i0_i1_i2p2/12),\n",
-      " *    const REAL_SIMD_ARRAY __RHS_exp_0 = vv,\n",
-      " *    const REAL_SIMD_ARRAY __RHS_exp_1 = uu_dDD00*wavespeed**2 + uu_dDD11*wavespeed**2 + uu_dDD22*wavespeed**2]\"\n",
+      " *  \"[const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1/3 - uu_i0m2/12 + 4*uu_i0p1/3 - uu_i0p2/12),\n",
+      " *    out_gfs[IDX2(UU_rhs, i0)] = vv,\n",
+      " *    out_gfs[IDX2(VV_rhs, i0)] = uu_dDD00*wavespeed**2]\"\n",
       " */\n",
       "{\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2-2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m1 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2-1)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1m2_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1-2,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1m1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1-1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0m2_i1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0-2,i1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0m1_i1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0-1,i1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0p1_i1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0+1,i1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0p2_i1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0+2,i1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1p1_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1+1,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1p2_i2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1+2,i2)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p1 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2+1)]);\n",
-      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p2 = ReadSIMD(&UUGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2+2)]);\n",
-      "   const REAL_SIMD_ARRAY vv = ReadSIMD(&VVGF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)]);\n",
-      "   const double tmp_Rational_4_3 = 1.333333333333333333333333333333333;\n",
-      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_4_3);\n",
-      "   const double tmp_Rational_m1_12 = -0.08333333333333333333333333333333333;\n",
-      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m1_12);\n",
-      "   const double tmp_Rational_m5_2 = -2.500000000000000000000000000000000;\n",
-      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_2);\n",
-      "\n",
-      "   const REAL_SIMD_ARRAY tmp0 = MulSIMD(uu, _Rational_m5_2);\n",
-      "   const REAL_SIMD_ARRAY tmp1 = MulSIMD(wavespeed, wavespeed);\n",
-      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p1_i1_i2, _Rational_4_3, FusedMulAddSIMD(uu_i0m2_i1_i2, _Rational_m1_12, FusedMulAddSIMD(uu_i0m1_i1_i2, _Rational_4_3, FusedMulAddSIMD(uu_i0p2_i1_i2, _Rational_m1_12, tmp0)))), MulSIMD(invdx0, invdx0));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p1_i2, _Rational_4_3, FusedMulAddSIMD(uu_i0_i1m2_i2, _Rational_m1_12, FusedMulAddSIMD(uu_i0_i1m1_i2, _Rational_4_3, FusedMulAddSIMD(uu_i0_i1p2_i2, _Rational_m1_12, tmp0)))), MulSIMD(invdx1, invdx1));\n",
-      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p1, _Rational_4_3, FusedMulAddSIMD(uu_i0_i1_i2m2, _Rational_m1_12, FusedMulAddSIMD(uu_i0_i1_i2m1, _Rational_4_3, FusedMulAddSIMD(uu_i0_i1_i2p2, _Rational_m1_12, tmp0)))), MulSIMD(invdx2, invdx2));\n",
-      "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
-      "   const REAL_SIMD_ARRAY __RHS_exp_1 = FusedMulAddSIMD(tmp1, uu_dDD11, FusedMulAddSIMD(tmp1, uu_dDD22, MulSIMD(tmp1, uu_dDD00)));\n",
-      "   WriteSIMD(&UU_rhs[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)], __RHS_exp_0);\n",
-      "   WriteSIMD(&VV_rhs[CCTK_GFINDEX3D(cctkGH, i0, i1, i2)], __RHS_exp_1);\n",
+      "   const double uu_i0m2 = in_gfs[IDX2(UUGF, i0-2)];\n",
+      "   const double uu_i0m1 = in_gfs[IDX2(UUGF, i0-1)];\n",
+      "   const double uu = in_gfs[IDX2(UUGF, i0)];\n",
+      "   const double uu_i0p1 = in_gfs[IDX2(UUGF, i0+1)];\n",
+      "   const double uu_i0p2 = in_gfs[IDX2(UUGF, i0+2)];\n",
+      "   const double vv = in_gfs[IDX2(VVGF, i0)];\n",
+      "   const double uu_dDD00 = pow(invdx0, 2)*(-(5.0 / 2.0)*uu + ((4.0 / 3.0))*uu_i0m1 - (1.0 / 12.0)*uu_i0m2 + ((4.0 / 3.0))*uu_i0p1 - (1.0 / 12.0)*uu_i0p2);;\n",
+      "   out_gfs[IDX2(UU_rhs, i0)] = vv;;\n",
+      "   out_gfs[IDX2(VV_rhs, i0)] = uu_dDD00*pow(wavespeed, 2);;\n",
       "}\n",
       "\n"
      ]
@@ -141,6 +202,8 @@
    "source": [
     "# The name of this module (\"scalarwave\") is given by __name__:\n",
     "thismodule = __name__\n",
+    "\n",
+    "par.set_parval_from_str(\"DIM\",1)\n",
     "\n",
     "# Step 0: Get the spatial dimension, as it was set in \n",
     "#         the grid module.\n",
@@ -169,6 +232,8 @@
     "for i in range(DIM):\n",
     "    vv_rhs += wavespeed*wavespeed*uu_dDD[i][i]\n",
     "\n",
+    "vv_rhs = sp.simplify(vv_rhs)\n",
+    "    \n",
     "# Step 5: Generate C code for scalarwave evolution equations,\n",
     "#         print output to the screen (standard out, or stdout).\n",
     "fin.FD_outputC(\"stdout\",\n",
