--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "We wish to approximate derivatives of $u_i$ at some nearby point (first we will consider derivatives at $x_i$ itself) using [finite difference](https://en.wikipedia.org/wiki/Finite_difference). (FD) techniques. \n",
     "\n",
-    "FD techniques are usually equivalent to first finding the unique $N$th degree polynomial that passes through $N+1$ sampled points of our function ($u$) in the neighborhood of where we wish to find the derivative. Then, provided $u$ is smooth and properly-sampled, the derivative of the polynomial is an approximate derivative of $u$ called the *finite difference derivative*. The approximation error generally decreases as the polynomial degree or sampling density increases.\n",
+    "FD techniques are usually equivalent to first finding the unique $N$th degree polynomial that passes through $N+1$ sampled points of our function ($u$) in the neighborhood of where we wish to find the derivative. Then, provided $u$ is smooth and properly-sampled, the $M$th derivative of the polynomial (where $M\\le N-1$; *Exercise: Justify this inequality*) is an approximate $M$th derivative of $u$ called the *$M$th-order finite difference derivative*. The approximation error generally decreases as the polynomial degree or sampling density increases.\n",
     "\n",
     "Finite difference derivatives are written in the form\n",
     "$$u^{(n)}(x_i)_{\\text{FD}} = \\sum_{j} u_j a_j,$$\n",
