--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "Though it was originally designed to greatly simplify the [writing of codes to solve Einstein's equations of general relativity on the computer](https://en.wikipedia.org/wiki/Numerical_relativity), **NRPy+** can be used to rapidly develop codes to solve any number of [hyperbolic](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) and [parabolic](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation) partial differential equations with finite difference approaches.\n",
     "\n",
-    "## Interactive NRPy+ Tutorials\n",
+    "## Interactive NRPy+ Jupyter Notebook Tutorials\n",
     "#### (READ FIRST, IN ORDER) Basic functionality of NRPy+\n",
     "+ #### (90% complete) [Basic C Code Output Options (including SIMD), NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "+ #### (95% complete) [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
