Fix a couple NRPy+ bugs; make more robust.

--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -56,7 +56,7 @@
    ],
    "source": [
     "# Set the dimension to 3\n",
-    "par.set_parval_from_str(\"DIM\",3)\n",
+    "par.set_parval_from_str(\"grid::DIM\",3)\n",
     "\n",
     "# Declare rank-1 contravariant (\"U\") vector\n",
     "betaU = ixp.declarerank1(\"betaU\")\n",
@@ -130,7 +130,7 @@
     "print(\"\\n\\nNext we will set betaU to [0,1,2]:\")\n",
     "\n",
     "# Get the dimension we just set, so we know how many indices to loop over\n",
-    "DIM = par.parval_from_str(\"DIM\")\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
     "for i in range(DIM):\n",
     "    betaU[i] = i\n",
@@ -166,7 +166,7 @@
     "betaD = ixp.declarerank1(\"betaD\")\n",
     "\n",
     "# Get the dimension we just set, so we know how many indices to loop over\n",
-    "DIM = par.parval_from_str(\"DIM\")\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
     "# Initialize dot product to zero\n",
     "dotprod = 0\n",
@@ -212,7 +212,7 @@
    ],
    "source": [
     "# Get the dimension we just set (should be set to 3).\n",
-    "DIM = par.parval_from_str(\"DIM\")\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
     "# Declare h_{ij}=hDD[i][j] and h^{ij}=hUU[i][j]\n",
     "hUU = ixp.declarerank2(\"hUU\",\"sym12\")\n",
@@ -252,8 +252,7 @@
       " */\n",
       "{\n",
       "   con = hDD00*hUU00 + 2*hDD01*hUU01 + 2*hDD02*hUU02 + hDD11*hUU11 + 2*hDD12*hUU12 + hDD22*hUU22;\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
@@ -288,13 +287,12 @@
       "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Integer_2);\n",
       "\n",
       "   con = FusedMulAddSIMD(hUU02, MulSIMD(hDD02, _Integer_2), FusedMulAddSIMD(hUU01, MulSIMD(hDD01, _Integer_2), FusedMulAddSIMD(hDD22, hUU22, FusedMulAddSIMD(hDD11, hUU11, FusedMulAddSIMD(hUU12, MulSIMD(hDD12, _Integer_2), MulSIMD(hDD00, hUU00))))));\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
    "source": [
-    "par.set_parval_from_str(\"SIMD_enable\",True)\n",
+    "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
     "outputC(con,\"con\")"
    ]
   },
