--- a/Tutorial-Numerical_Grids.ipynb
+++ b/Tutorial-Numerical_Grids.ipynb
@@ -19,8 +19,8 @@
     "    * Alternatively, the \"grid::MemAllocStyle=210\" is the reverse:\n",
     "        * for(int i2=0;i2<Nx\\[2\\];i2++) for(int i1=0;i1<Nx\\[1\\];i1++) for(int i0=0;i0<Nx\\[0\\];i0++) {\n",
     "* **grid::GridFuncMemAccess** -- specifies how gridfunction data is accessed from memory. For example,\n",
-    "    * In the Einstein Toolkit (grid::GridFuncMemAccess=\"ETK\"), the datum from gridfunction dummy at point (i0,j0,k0) is accessed via \"dummy\\[CCTK_GFINDEX3D(cctkGH,i0,j0,k0)\\]\".\n",
-    "    * In SENR (grid::GridFuncMemAccess=\"SENRlike\"), the datum from gridfunction dummy in gridfunction array gfarry at point (i0,j0,k0) is accessed via \"gfarray\\[IDX4D(dummy,i0,j0,k0)\\]\".\n",
+    "    * In the Einstein Toolkit (grid::GridFuncMemAccess=\"ETK\"), the datum from gridfunction dummy at point (i0,j0,k0) is accessed via \"dummyGF\\[CCTK_GFINDEX3D(cctkGH,i0,j0,k0)\\]\".\n",
+    "    * In SENR (grid::GridFuncMemAccess=\"SENRlike\"), the datum from gridfunction dummy in gridfunction array gfarry at point (i0,j0,k0) is accessed via \"gfarray\\[IDX4D(DUMMYGF,i0,j0,k0)\\]\".\n",
     "    * *Special note*: NRPy+ is code agnostic; additional types can be easily be added by modifying the function gfaccess() in the NRPy+ grid module. It should only require about 5 lines of code.\n",
     "\n",
     "Functions in this module include:\n",
@@ -32,7 +32,7 @@
     "    * gf_names can be a single gridfunction or a set of gridfunctions, all with the same gf_type.\n",
     "* **variable_type(var)**: First searches the list of registered gridfunctions and parameters for gridfunctions or C parameters; then outputs \"gridfunction\" or \"Cparameter\" if one or the other is found, respectively. Otherwise it will output \"other\"\n",
     "\n",
-    "Let's now register a gridfunction called \"phiGF\" in the \"in_gfs\" gridfunction array, then print C code that specifies how to access the gridfunction from the single point in memory (i0,i1,i2). Next we will demonstrate that phiGF is a normal SymPy variable, and finally we will confirm that its type is \"gridfunction\" using variable_type():"
+    "Let's now register a gridfunction called \"phi\" in the \"in_gfs\" gridfunction array, then print C code that specifies how to access the gridfunction from the single point in memory (i0,i1,i2). Next we will demonstrate that phi is a normal SymPy variable, and finally we will confirm that its type is \"gridfunction\" using variable_type():"
    ]
   },
   {
@@ -44,30 +44,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here's how to access the gridfunction phiGF, in grid array in_gfs, at point (i0,i1,i2):\n",
-      "in_gfs[IDX4(phiGF, i0,i1,i2)]\n",
-      "To demonstrate that phiGF is now just a regular SymPy variable, we will now print its square:\n",
-      "phiGF**2\n",
-      "\"phiGF\" is of type \"gridfunction\"\n"
+      "Here's how to access the gridfunction phi, in grid array in_gfs, at point (i0,i1,i2):\n",
+      "in_gfs[IDX4(PHIGF, i0,i1,i2)]\n",
+      "To demonstrate that phi is now just a regular SymPy variable, we will now print its square:\n",
+      "phi**2\n",
+      "\"phi\" is of type \"gridfunction\"\n"
      ]
     }
    ],
    "source": [
     "import grid as gri\n",
     "\n",
-    "# Register phiGF, as type \"AUX\". \n",
+    "# Register gridfunction phi, as type \"AUX\". \n",
     "# WARNING: register_gridfunctions can only be run once on a given gridfunction;\n",
     "#          you'll need to reset the Jupyter kernel before trying again:\n",
-    "phiGF = gri.register_gridfunctions(\"AUX\",\"phiGF\")\n",
+    "phi = gri.register_gridfunctions(\"AUX\",\"phi\")\n",
     "\n",
-    "print(\"Here's how to access the gridfunction phiGF, in grid array in_gfs, at point (i0,i1,i2):\")\n",
-    "print(gri.gfaccess(\"in_gfs\",\"phiGF\",\"i0,i1,i2\"))\n",
+    "print(\"Here's how to access the gridfunction phi, in grid array in_gfs, at point (i0,i1,i2):\")\n",
+    "print(gri.gfaccess(\"in_gfs\",\"phi\",\"i0,i1,i2\"))\n",
     "\n",
-    "# Note that phiGF can now be used as a usual SymPy variable:\n",
-    "print(\"To demonstrate that phiGF is now just a regular SymPy variable, we will now print its square:\")\n",
-    "print(phiGF**2)\n",
+    "# Note that phi can now be used as a usual SymPy variable:\n",
+    "print(\"To demonstrate that phi is now just a regular SymPy variable, we will now print its square:\")\n",
+    "print(phi**2)\n",
     "\n",
-    "print(\"\\\"phiGF\\\" is of type \\\"\"+ gri.variable_type(phiGF)+\"\\\"\")"
+    "print(\"\\\"phi\\\" is of type \\\"\"+ gri.variable_type(phi)+\"\\\"\")"
    ]
   }
  ],
