--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: Generating C code to solve the scalar wave equation, in Cartesian coordinates\n",
+    "## Generating C code for the right-hand-side of the scalar wave equation, in Cartesian coordinates\n",
     "\n",
     "### Problem Statement\n",
     "\n",
@@ -27,6 +27,7 @@
     "\\partial_t v &= c^2 \\nabla^2 u.\n",
     "\\end{align}\n",
     "\n",
+    "**Our goal will be to generate C code capable of computing the right-hand sides of the above equation.**\n",
     "\n",
     "### Numerical Solution to the Wave Equation \n",
     "\n",
@@ -52,11 +53,7 @@
     "+ \\frac{4}{3}  \\left(u_{j+1} + u_{j-1}\\right)\n",
     "- \\frac{5}{2} u_j \\right)\n",
     "+ \\mathcal{O}\\left((\\Delta x)^4\\right).\n",
-    "\\end{equation}\n",
-    "\n",
-    "#### Temporal Derivatives: Numerical Timestepping\n",
-    "\n",
-    "\n"
+    "\\end{equation}"
    ]
   },
   {
@@ -84,8 +81,8 @@
       "/*\n",
       " *  Original SymPy expressions:\n",
       " *  \"[const double uu_dDD00 = invdx0**2*(-5*uu/2 + 4*uu_i0m1/3 - uu_i0m2/12 + 4*uu_i0p1/3 - uu_i0p2/12),\n",
-      " *    out_gfs[IDX2(UU_rhs, i0)] = vv,\n",
-      " *    out_gfs[IDX2(VV_rhs, i0)] = uu_dDD00*wavespeed**2]\"\n",
+      " *    rhs_gfs[IDX2(UUGF, i0)] = vv,\n",
+      " *    rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*wavespeed**2]\"\n",
       " */\n",
       "{\n",
       "   const double uu_i0m2 = in_gfs[IDX2(UUGF, i0-2)];\n",
@@ -95,10 +92,9 @@
       "   const double uu_i0p2 = in_gfs[IDX2(UUGF, i0+2)];\n",
       "   const double vv = in_gfs[IDX2(VVGF, i0)];\n",
       "   const double uu_dDD00 = pow(invdx0, 2)*(-(5.0 / 2.0)*uu + ((4.0 / 3.0))*uu_i0m1 - (1.0 / 12.0)*uu_i0m2 + ((4.0 / 3.0))*uu_i0p1 - (1.0 / 12.0)*uu_i0p2);\n",
-      "   out_gfs[IDX2(UU_rhs, i0)] = vv;\n",
-      "   out_gfs[IDX2(VV_rhs, i0)] = uu_dDD00*pow(wavespeed, 2);\n",
-      "}\n",
-      "\n"
+      "   rhs_gfs[IDX2(UUGF, i0)] = vv;\n",
+      "   rhs_gfs[IDX2(VVGF, i0)] = uu_dDD00*pow(wavespeed, 2);\n",
+      "}\n"
      ]
     }
    ],
@@ -108,11 +104,11 @@
     "\n",
     "# Step 0: Set the spatial dimension parameter, and then read\n",
     "#         the parameter as DIM.\n",
-    "par.set_parval_from_str(\"DIM\",1)\n",
-    "DIM = par.parval_from_str(\"DIM\")\n",
+    "par.set_parval_from_str(\"grid::DIM\",1)\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
     "# Step 1: Set the finite differencing order to 4.\n",
-    "par.set_parval_from_str(\"FD_CENTDERIVS_ORDER\",4)\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\",4)\n",
     "\n",
     "# Step 2: Register gridfunctions that are needed as input.\n",
     "uu, vv = gri.register_gridfunctions(\"EVOL\",[\"uu\",\"vv\"])\n",
@@ -142,16 +138,159 @@
     "# Step 6: Generate C code for scalarwave evolution equations,\n",
     "#         print output to the screen (standard out, or stdout).\n",
     "fin.FD_outputC(\"stdout\",\n",
-    "               [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"UU_rhs\"),rhs=uu_rhs),\n",
-    "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"VV_rhs\"),rhs=vv_rhs)])"
+    "               [lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=uu_rhs),\n",
+    "                lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=vv_rhs)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Success!** Notice that indeed NRPy+ was able to compute the spatial derivative operator,\n",
+    "\\begin{equation}\n",
+    "\\left[\\partial_x^2 u(t,x)\\right]_j \\approx \\frac{1}{(\\Delta x)^2}\n",
+    "\\left(\n",
+    "-\\frac{1}{12} \\left(u_{j+2} + u_{j-2}\\right) \n",
+    "+ \\frac{4}{3}  \\left(u_{j+1} + u_{j-1}\\right)\n",
+    "- \\frac{5}{2} u_j \\right)\n",
+    "\\end{equation}\n",
+    "correctly (easier to read in the \"Original SymPy expressions\" comment block at the top of the C output.\n",
+    "\n",
+    "Now let's repeat the process, except at *10th* finite difference order, for the *4+1D* scalar wave equation, with SIMD enabled:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expressions:\n",
+      " *  \"[const REAL_SIMD_ARRAY uu_dDD33 = invdx3**2*(-5269*uu/1800 + 5*uu_i0_i1_i2_i3m1/3 - 5*uu_i0_i1_i2_i3m2/21 + 5*uu_i0_i1_i2_i3m3/126 - 5*uu_i0_i1_i2_i3m4/1008 + uu_i0_i1_i2_i3m5/3150 + 5*uu_i0_i1_i2_i3p1/3 - 5*uu_i0_i1_i2_i3p2/21 + 5*uu_i0_i1_i2_i3p3/126 - 5*uu_i0_i1_i2_i3p4/1008 + uu_i0_i1_i2_i3p5/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD00 = invdx0**2*(-5269*uu/1800 + 5*uu_i0m1_i1_i2_i3/3 - 5*uu_i0m2_i1_i2_i3/21 + 5*uu_i0m3_i1_i2_i3/126 - 5*uu_i0m4_i1_i2_i3/1008 + uu_i0m5_i1_i2_i3/3150 + 5*uu_i0p1_i1_i2_i3/3 - 5*uu_i0p2_i1_i2_i3/21 + 5*uu_i0p3_i1_i2_i3/126 - 5*uu_i0p4_i1_i2_i3/1008 + uu_i0p5_i1_i2_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD11 = invdx1**2*(-5269*uu/1800 + 5*uu_i0_i1m1_i2_i3/3 - 5*uu_i0_i1m2_i2_i3/21 + 5*uu_i0_i1m3_i2_i3/126 - 5*uu_i0_i1m4_i2_i3/1008 + uu_i0_i1m5_i2_i3/3150 + 5*uu_i0_i1p1_i2_i3/3 - 5*uu_i0_i1p2_i2_i3/21 + 5*uu_i0_i1p3_i2_i3/126 - 5*uu_i0_i1p4_i2_i3/1008 + uu_i0_i1p5_i2_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY uu_dDD22 = invdx2**2*(-5269*uu/1800 + 5*uu_i0_i1_i2m1_i3/3 - 5*uu_i0_i1_i2m2_i3/21 + 5*uu_i0_i1_i2m3_i3/126 - 5*uu_i0_i1_i2m4_i3/1008 + uu_i0_i1_i2m5_i3/3150 + 5*uu_i0_i1_i2p1_i3/3 - 5*uu_i0_i1_i2p2_i3/21 + 5*uu_i0_i1_i2p3_i3/126 - 5*uu_i0_i1_i2p4_i3/1008 + uu_i0_i1_i2p5_i3/3150),\n",
+      " *    const REAL_SIMD_ARRAY __RHS_exp_0 = vv,\n",
+      " *    const REAL_SIMD_ARRAY __RHS_exp_1 = wavespeed**2*(uu_dDD00 + uu_dDD11 + uu_dDD22 + uu_dDD33)]\"\n",
+      " */\n",
+      "{\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m5 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-5)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m4 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-4)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m2 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-2)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3m1 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3-1)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m5_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-5,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m4_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-4,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m3_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-3,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2m1_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2-1,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m5_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-5,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m4_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-4,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m3_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-3,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m2_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-2,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1m1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1-1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m5_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-5,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m4_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-4,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m3_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-3,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m2_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-2,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0m1_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0-1,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p1_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+1,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p2_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+2,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p3_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+3,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p4_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+4,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0p5_i1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0+5,i1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p1_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+1,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p2_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+2,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p3_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+3,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p4_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+4,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1p5_i2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1+5,i2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p1_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+1,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p2_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+2,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p3_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+3,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p4_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+4,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2p5_i3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2+5,i3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p1 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+1)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p2 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+2)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p3 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+3)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p4 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+4)]);\n",
+      "   const REAL_SIMD_ARRAY uu_i0_i1_i2_i3p5 = ReadSIMD(&in_gfs[IDX5(UUGF, i0,i1,i2,i3+5)]);\n",
+      "   const REAL_SIMD_ARRAY vv = ReadSIMD(&in_gfs[IDX5(VVGF, i0,i1,i2,i3)]);\n",
+      "   const double tmp_Rational_1_3150 = 0.0003174603174603174603174603174603175;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_1_3150);\n",
+      "   const double tmp_Rational_5_126 = 0.03968253968253968253968253968253968;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_5_126);\n",
+      "   const double tmp_Rational_5_3 = 1.666666666666666666666666666666667;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_5_3);\n",
+      "   const double tmp_Rational_m5269_1800 = -2.927222222222222222222222222222222;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5269_1800);\n",
+      "   const double tmp_Rational_m5_1008 = -0.004960317460317460317460317460317460;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_1008);\n",
+      "   const double tmp_Rational_m5_21 = -0.2380952380952380952380952380952381;\n",
+      "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Rational_m5_21);\n",
+      "\n",
+      "   const REAL_SIMD_ARRAY tmp0 = MulSIMD(uu, _Rational_m5269_1800);\n",
+      "   const REAL_SIMD_ARRAY uu_dDD33 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2_i3p4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3p3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3p2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3p1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3m5, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2_i3m4, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2_i3m3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2_i3m2, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2_i3m1, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2_i3p5, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx3, invdx3));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD00 = MulSIMD(FusedMulAddSIMD(uu_i0p4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0p3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0p2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0p1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0m5_i1_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0m4_i1_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0m3_i1_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0m2_i1_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0m1_i1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0p5_i1_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx0, invdx0));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD11 = MulSIMD(FusedMulAddSIMD(uu_i0_i1p4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1p3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1p2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1p1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1m5_i2_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1m4_i2_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1m3_i2_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1m2_i2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1m1_i2_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1p5_i2_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx1, invdx1));\n",
+      "   const REAL_SIMD_ARRAY uu_dDD22 = MulSIMD(FusedMulAddSIMD(uu_i0_i1_i2p4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2p3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2p2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2p1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2m5_i3, _Rational_1_3150, FusedMulAddSIMD(uu_i0_i1_i2m4_i3, _Rational_m5_1008, FusedMulAddSIMD(uu_i0_i1_i2m3_i3, _Rational_5_126, FusedMulAddSIMD(uu_i0_i1_i2m2_i3, _Rational_m5_21, FusedMulAddSIMD(uu_i0_i1_i2m1_i3, _Rational_5_3, FusedMulAddSIMD(uu_i0_i1_i2p5_i3, _Rational_1_3150, tmp0)))))))))), MulSIMD(invdx2, invdx2));\n",
+      "   const REAL_SIMD_ARRAY __RHS_exp_0 = vv;\n",
+      "   const REAL_SIMD_ARRAY __RHS_exp_1 = MulSIMD(AddSIMD(uu_dDD22, AddSIMD(uu_dDD11, AddSIMD(uu_dDD00, uu_dDD33))), MulSIMD(wavespeed, wavespeed));\n",
+      "   WriteSIMD(&rhs_gfs[IDX5(UUGF, i0, i1, i2, i3)], __RHS_exp_0);\n",
+      "   WriteSIMD(&rhs_gfs[IDX5(VVGF, i0, i1, i2, i3)], __RHS_exp_1);\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step -1: Enable SIMD\n",
+    "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
+    "\n",
+    "# Step 0: Set the spatial dimension parameter, and then read\n",
+    "#         the parameter as DIM.\n",
+    "par.set_parval_from_str(\"grid::DIM\",4)\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
+    "\n",
+    "# Step 1: Set the finite differencing order to 10.\n",
+    "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\",10)\n",
+    "\n",
+    "# Step 2: Register gridfunctions that are needed as input.\n",
+    "# Already registered in the previous step!\n",
+    "#uu, vv = gri.register_gridfunctions(\"EVOL\",[\"uu\",\"vv\"])\n",
+    "\n",
+    "# Step 3: Declare the rank-2 indexed expression \\partial_{ij} u,\n",
+    "#         which is symmetric about interchange of indices i and j\n",
+    "#         Derivative variables like these must have an underscore\n",
+    "#         in them, so the finite difference module can parse the\n",
+    "#         variable name properly.\n",
+    "uu_dDD = ixp.declarerank2(\"uu_dDD\",\"sym12\")\n",
+    "\n",
+    "# Step 4: Define the C parameter wavespeed. The `wavespeed`\n",
+    "#         variable is a proper SymPy variable, so it can be\n",
+    "#         used in below expressions. In the C code, it acts\n",
+    "#         just like a usual parameter, whose value is \n",
+    "#         specified in the parameter file.\n",
+    "# Already initialized:\n",
+    "#wavespeed = par.Cparameters(\"REAL\",thismodule,\"wavespeed\")\n",
+    "\n",
+    "# Step 5: Define right-hand sides for the evolution.\n",
+    "uu_rhs = vv\n",
+    "vv_rhs = 0\n",
+    "for i in range(DIM):\n",
+    "    vv_rhs += wavespeed*wavespeed*uu_dDD[i][i]\n",
+    "\n",
+    "vv_rhs = sp.simplify(vv_rhs)\n",
+    "    \n",
+    "# Step 6: Generate C code for scalarwave evolution equations,\n",
+    "#         print output to the screen (standard out, or stdout).\n",
+    "fin.FD_outputC(\"stdout\",\n",
+    "               [lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"uu\"),rhs=uu_rhs),\n",
+    "                lhrh(lhs=gri.gfaccess(\"rhs_gfs\",\"vv\"),rhs=vv_rhs)])"
+   ]
   }
  ],
  "metadata": {
