--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -28,16 +28,19 @@
     "\n",
     "## Interactive NRPy+ Jupyter Notebook Tutorials\n",
     "#### (READ FIRST, IN ORDER) Basic functionality of NRPy+\n",
-    "+ #### [Basic C Code Output Options (including SIMD), NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
+    "+ #### [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "+ #### [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ #### [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ #### [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
-    "+ #### (coming soon) [Moving beyond Cartesian Grids: Reference Metric](Tutorial-Reference_Metric.ipynb)\n",
+    "+ #### (coming soon) Moving beyond Cartesian Grids: Reference Metric\n",
+    "    + *In the meantime: [commented reference_metric.py NRPy+ module source code](https://bitbucket.org/zach_etienne/nrpy/src/master/reference_metric.py?mode=edit&spa=0)* (Disclaimer: this source code is from the original version of NRPy+; still needs to be ported to the latest version.)\n",
     "\n",
     "#### (READ SECOND, IN ORDER) Worked Examples\n",
     "+ #### [The Scalar Wave Equation (Cartesian Coordinates)](Tutorial-ScalarWave.ipynb)\n",
-    "+ #### (coming soon) [The Scalar Wave Equation in Curvilinear Coordinates](Tutorial-ScalarWave-Curvi.ipynb)\n",
-    "+ #### (coming soon) [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSN.ipynb)"
+    "+ #### (coming soon) The Scalar Wave Equation in Curvilinear Coordinates\n",
+    "    + *In the meantime: [commented scalarwave_RHSs.py NRPy+ module source code](https://bitbucket.org/zach_etienne/nrpy/src/master/scalarwave_RHSs.py?mode=edit&spa=0)* (Disclaimer: this source code is from the original version of NRPy+; still needs to be ported to the latest version.)\n",
+    "+ #### (coming soon) General Relativity in the BSSN Formalism, Moving Puncture Gauge]\n",
+    "    + *In the meantime: commented NRPy+ module source codes [BSSN_RHSs.py](https://bitbucket.org/zach_etienne/nrpy/src/master/BSSN_RHSs.py?mode=edit&spa=0), which depends on [ref_metric__hatted_quantities.py](https://bitbucket.org/zach_etienne/nrpy/src/master/ref_metric__hatted_quantities.py?mode=edit&spa=0)* (Disclaimer: this source code is from the original version of NRPy+; still needs to be ported to the latest version.)"
    ]
   }
  ],
