Major update to FD tutorial

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -68,8 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1/4, -5/6, 3/2, -1/2, 1/12]\n",
-      "[[-1, 0, 0, 0], [0, 0, 0, 0], [1, 0, 0, 0], [2, 0, 0, 0], [3, 0, 0, 0]]\n"
+      "[-3/2, 2, -1/2]\n",
+      "[[0, 0, 0, 0], [1, 0, 0, 0], [2, 0, 0, 0]]\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "import finite_difference as fin\n",
     "\n",
     "# \n",
-    "fdcoeffs, fdstencl = fin.compute_fdcoeffs_fdstencl(\"dupD0\",4)\n",
+    "fdcoeffs, fdstencl = fin.compute_fdcoeffs_fdstencl(\"dupD0\",2)\n",
     "print(fdcoeffs)\n",
     "print(fdstencl)"
    ]
@@ -95,11 +95,40 @@
     "\n",
     "Notice also that multiplying by the appropriate power of $\\frac{1}{\\Delta x}$ term is up to the user of this function.\n",
     "\n",
-    "In addition, if $u$ is a function of fewer than four coordinate variables, it is up to the calling function to truncate the additional information.\n",
+    "In addition, if the gridfunction $u$ exists on a grid that is less than four (spatial) dimensions, it is up to the user to truncate the additional index information.\n",
     "\n",
+    "#### Exercise: Using compute_fdcoeffs_fdstencl(), write the necessary loops to output the finite difference coefficient tables in the Wikipedia article on [finite difference coefficients](https://en.wikipedia.org/wiki/Finite_difference_coefficients), for up to second-order derivatives (i.e., up to $\\partial_i^2$), and for upwinded derivatives up to second-order accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **FD_outputC(filename,sympyexpr_list)**:\n",
     "\n",
-    "FD_outputC() is the "
+    "C codes that evaluate expressions with finite difference derivatives on numerical grids generally consist of three  components, all existing within a loop over \"interior\" gridpoints; at a given gridpoint, the code must\n",
+    "1. Read gridfunctions from memory at all points needed to evaluate the finite difference derivatives or the gridfunctions themselves.\n",
+    "2. Perform arithmetic, including computation of finite difference stencils.\n",
+    "3. Write the output from the arithmetic to other gridfunctions.\n",
+    "\n",
+    "To minimize cache misses and maximize potential compiler optimizations, it is generally recommended to segregate the above three steps. FD_outputC() first analyzes the input expressions, searching for derivatives of gridfunctions. The search is very easy, as NRPy+ requires a very specific syntax for derivatives: \n",
+    "* gf_dD0 denotes the first derivative of gridfunction \"gf\" in direction zero.\n",
+    "* gf_dupD0 denotes the upwinded first derivative of gridfunction \"gf\" in direction zero.\n",
+    "* gf_ddnD0 denotes the downwinded first derivative of gridfunction \"gf\" in direction zero.\n",
+    "* gf_dKOD2 denotes the Kreiss-Oliger dissipation operator of gridfunction \"gf\" in direction two.\n",
+    "Each time FD_outputC() finds a derivative (including references to the gridfunction directly \\[\"zeroth\"-order derivatives\\]) in this way, it calls compute_fdcoeffs_fdstencl() to record the specific locations in memory from which the underlying gridfunction must be read to evaluate the appropriate finite difference derivative.\n",
+    "\n",
+    "FD_outputC() then orders this list of points for all gridfunctions and points in memory, optimizing memory reads based on how the gridfunctions are stored in memory (set via parameter MemAllocStyle in the NRPy+ grid module). It then completes step 1. \n",
+    "\n",
+    "For step 2, FD_outputC() exports all of the finite difference expressions, as well as the original expressions input into the function, to outputC() to generate the optimized C code. Step 3 follows trivally from just being careful with the bookkeeping in the above steps.\n",
+    "\n",
+    "**FD_outputC() takes two arguments:\n",
+    "* **filename**: Set to \"stdout\" to print to screen. Otherwise specify a filename.\n",
+    "* **sympyexpr_list**: A single named tuple or list of named tuples of type \"lhrh\", where the lhrh type refers to the simple structure:\n",
+    "    * **lhrh(left-hand side of equation, right-hand side of the equation)**\n",
+    "\n",
+    "Time for an example: let's compute $$\\texttt{output} = \\partial_0 \\phi$$\n",
+    "for gridfunctions $\\texttt{output}$ and $\\texttt{phi}=\\phi$:"
    ]
   },
   {
@@ -114,7 +143,7 @@
       "/*\n",
       " *  Original SymPy expressions:\n",
       " *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1_i1_i2/3 + phi_i0m2_i1_i2/12 + 2*phi_i0p1_i1_i2/3 - phi_i0p2_i1_i2/12),\n",
-      " *    out_gfs[IDX4(PHID0GF, i0, i1, i2)] = phi_dD0]\"\n",
+      " *    out_gfs[IDX4(OUTPUTGF, i0, i1, i2)] = phi_dD0**2]\"\n",
       " */\n",
       "{\n",
       "   const double phi_i0m2_i1_i2 = in_gfs[IDX4(PHIGF, i0-2,i1,i2)];\n",
@@ -122,7 +151,7 @@
       "   const double phi_i0p1_i1_i2 = in_gfs[IDX4(PHIGF, i0+1,i1,i2)];\n",
       "   const double phi_i0p2_i1_i2 = in_gfs[IDX4(PHIGF, i0+2,i1,i2)];\n",
       "   const double phi_dD0 = invdx0*(-(2.0 / 3.0)*phi_i0m1_i1_i2 + ((1.0 / 12.0))*phi_i0m2_i1_i2 + ((2.0 / 3.0))*phi_i0p1_i1_i2 - (1.0 / 12.0)*phi_i0p2_i1_i2);\n",
-      "   out_gfs[IDX4(PHID0GF, i0, i1, i2)] = phi_dD0;\n",
+      "   out_gfs[IDX4(OUTPUTGF, i0, i1, i2)] = pow(phi_dD0, 2);\n",
       "}\n"
      ]
     }
@@ -131,19 +160,20 @@
     "import sympy as sp\n",
     "from outputC import *\n",
     "import grid as gri\n",
+    "import indexedexp as ixp\n",
     "import finite_difference as fin\n",
     "\n",
-    "phi, phiD0 = gri.register_gridfunctions(\"AUX\",[\"phi\",\"phiD0\"])\n",
+    "# Register the input gridfunction \"phi\" and the gridfunction to which data are output, \"output\":\n",
+    "phi, output = gri.register_gridfunctions(\"AUX\",[\"phi\",\"output\"])\n",
     "\n",
-    "phi_dD0 = sp.sympify(\"phi_dD0\")\n",
-    "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"phiD0\"),rhs=phi_dD0))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise: Write the necessary loops to output the finite difference coefficient tables in the Wikipedia article on [finite difference coefficients](https://en.wikipedia.org/wiki/Finite_difference_coefficients)."
+    "# Declare phi_dD as a rank-1 indexed expression: phi_dD[i] = \\partial_i phi\n",
+    "phi_dD = ixp.declarerank1(\"phi_dD\")\n",
+    "\n",
+    "# Set output to (\\partial_0 phi)^2\n",
+    "output = phi_dD[0]**2\n",
+    "\n",
+    "# Output to the screen the \n",
+    "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"output\"),rhs=output))"
    ]
   }
  ],
