Minor update to FD tutorial

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -127,7 +127,7 @@
     "* **sympyexpr_list**: A single named tuple or list of named tuples of type \"lhrh\", where the lhrh type refers to the simple structure:\n",
     "    * **lhrh(left-hand side of equation, right-hand side of the equation)**\n",
     "\n",
-    "Time for an example: let's compute $$\\texttt{output} = \\partial_0 \\phi$$\n",
+    "Time for an example: let's compute $$\\texttt{output} = (\\partial_0 \\phi)^2$$\n",
     "for gridfunctions $\\texttt{output}$ and $\\texttt{phi}=\\phi$:"
    ]
   },
