--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -68,8 +68,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3/2, 2, -1/2]\n",
-      "[[0, 0, 0, 0], [1, 0, 0, 0], [2, 0, 0, 0]]\n"
+      "[1/12, -2/3, 2/3, -1/12]\n",
+      "[[-2, 0, 0, 0], [-1, 0, 0, 0], [1, 0, 0, 0], [2, 0, 0, 0]]\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "import finite_difference as fin\n",
     "\n",
     "# \n",
-    "fdcoeffs, fdstencl = fin.compute_fdcoeffs_fdstencl(\"dupD0\",2)\n",
+    "fdcoeffs, fdstencl = fin.compute_fdcoeffs_fdstencl(\"dD0\",4)\n",
     "print(fdcoeffs)\n",
     "print(fdstencl)"
    ]
