Work on harmonizing different Jupyter notebooks

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "Thus NRPy+ found that for some function $u$, the fourth-order accurate finite difference operator is given by\n",
     "\n",
-    "$$[\\partial_x u]_\\text{FD4} = \\frac{1}{\\Delta x} \\frac{1}{12} \\left(u_{i0-2,i1,i2,i3} - u_{i0+2,i1,i2,i3}\\right) + \\frac{2}{3} \\left(-u_{i0-1,i1,i2,i3} + u_{i0+1,i1,i2,i3}\\right)$$\n",
+    "$$[\\partial_x u]_\\text{FD4} = \\frac{1}{\\Delta x} \\left[ \\frac{1}{12} \\left(u_{i0-2,i1,i2,i3} - u_{i0+2,i1,i2,i3}\\right) + \\frac{2}{3} \\left(-u_{i0-1,i1,i2,i3} + u_{i0+1,i1,i2,i3}\\right)\\right]$$\n",
     "\n",
     "Notice also that multiplying by the appropriate power of $\\frac{1}{\\Delta x}$ term is up to the user of this function.\n",
     "\n",
