--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -35,15 +35,78 @@
     "Indexed expressions of rank 1 are stored as [Python lists](https://www.tutorialspoint.com/python/python_lists.htm). \n",
     "\n",
     "There are two ways to declare indexed expressions:\n",
-    "+ **Symbolically:** $\\texttt{declarerank1}$(\"basename\",*optional: DIM*)\n",
-    "+ **Initialize to zero:** $\\texttt{zerorank1}$(*optional: DIM*) $\\leftarrow$ As we will see below, initializing to zero is useful if the indexed expression depends entirely on some other indexed or non-indexed expressions.\n",
+    "+ **Initialize indexed expression to zero:** \n",
+    "    + **zerorank1(DIM=-1)** $\\leftarrow$ As we will see below, initializing to zero is useful if the indexed expression depends entirely on some other indexed or non-indexed expressions.\n",
+    "        + **DIM** is an *optional* parameter that, if set to -1, will default to the dimension as set in the **grid** module: par.parval_from_str(\"grid::DIM\"). Otherwise the rank-1 indexed expression will have dimension **DIM**.\n",
+    "+ **Initialize indexed expression symbolically:** \n",
+    "    + **declarerank1(\"basename\",DIM=-1)**. \n",
+    "        + As in **zerorank1(), **DIM** is an *optional* parameter that, if set to -1, will default to the dimension as set in the **grid** module: par.parval_from_str(\"grid::DIM\"). Otherwise the rank-1 indexed expression will have dimension **DIM**.\n",
     "\n",
-    "For example, the 3-vector $\\beta^i$ (upper index denotes contravariant) can be declared in NRPy+ symbolically as follows:"
+    "For example, the 3-vector $\\beta^i$ (upper index denotes contravariant) can be initialized to zero as follows:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declare rank-1 contravariant (\"U\") vector\n",
+    "betaU = ixp.zerorank1()\n",
+    "\n",
+    "# Print the result. It's a list of zeros!\n",
+    "print(betaU)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next set $\\beta^i = \\sum_{j=0}^i j = \\{0,1,3\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 3-vector betaU is now set to: [0, 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the dimension we just set, so we know how many indices to loop over\n",
+    "DIM = par.parval_from_str(\"grid::DIM\")\n",
+    "\n",
+    "for i in range(DIM): # sum i from 0 to DIM-1, inclusive\n",
+    "    for j in range(i+1): # sum j from 0 to i, inclusive\n",
+    "        betaU[i] += j\n",
+    "    \n",
+    "print(\"The 3-vector betaU is now set to: \"+str(betaU))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, the 3-vector $\\beta^i$ can be initialized **symbolically** as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,17 +132,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NRPy+'s standard naming convention for indexed rank-1 expressions is \n",
+    "Declaring $\\beta^i$ symbolically is standard in case $\\texttt{betaU0}$, $\\texttt{betaU1}$, and $\\texttt{betaU2}$ are defined elsewhere (e.g., read in from main memory as a gridfunction.\n",
+    "\n",
+    "As can be seen, NRPy+'s standard naming convention for indexed rank-1 expressions is \n",
     "+ **\\[base variable name\\]+\\[\"U\" for contravariant (up index) or \"D\" for covariant (down index)\\]**\n",
     "\n",
-    "After declaring the vector, $\\texttt{betaU0}$, $\\texttt{betaU1}$, and $\\texttt{betaU2}$ can only be accessed or manipulated through list access; i.e., via $\\texttt{betaU[0]}$, $\\texttt{betaU[1]}$, and $\\texttt{betaU[2]}$, respectively. \n",
+    "*Caution*: After declaring the vector, $\\texttt{betaU0}$, $\\texttt{betaU1}$, and $\\texttt{betaU2}$ can only be accessed or manipulated through list access; i.e., via $\\texttt{betaU[0]}$, $\\texttt{betaU[1]}$, and $\\texttt{betaU[2]}$, respectively. Attempts to access $\\texttt{betaU0}$ directly will fail.\n",
     "\n",
-    "For example, let's multiply $\\texttt{betaU1}$ by 2:"
+    "Knowing this, let's multiply $\\texttt{betaU1}$ by 2:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,53 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we could simply initialize $\\text{betaU[i]}$ to zero, and then use :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 3-vector betaU is initialized to zero: [0, 0, 0]\n",
-      "\n",
-      "\n",
-      "Next we will set betaU to [0,1,2]:\n",
-      "The 3-vector betaU is now set to: [0, 1, 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize betaU to zero\n",
-    "betaU = ixp.zerorank1()\n",
-    "# Prove it:\n",
-    "print(\"The 3-vector betaU is initialized to zero: \"+str(betaU))\n",
-    "\n",
-    "print(\"\\n\\nNext we will set betaU to [0,1,2]:\")\n",
-    "\n",
-    "# Get the dimension we just set, so we know how many indices to loop over\n",
-    "DIM = par.parval_from_str(\"grid::DIM\")\n",
-    "\n",
-    "for i in range(DIM):\n",
-    "    betaU[i] = i\n",
-    "    \n",
-    "print(\"The 3-vector betaU is now set to: \"+str(betaU))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Next, let's declare the variable $\\beta_j$ and perform the dot product $\\beta^i \\beta_i$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
