Reference metric tutorial

--- a/Tutorial-Reference_Metric.ipynb
+++ b/Tutorial-Reference_Metric.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# NRPy+'s Reference Metric Interface\n",
     "\n",
-    "### NRPy+ Source Code for this module: [reference_metric.py](../edit/reference_metric.py), [reference_metric__hatted_quantities.py](../edit/reference_metric__hatted_quantities.py)"
+    "### NRPy+ Source Code for this module: [reference_metric.py](../edit/reference_metric.py)"
    ]
   },
   {
@@ -160,9 +160,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ***reference_metric__hatted_quantities.py***: Computing basic geometric quantities\n",
+    "### ***ref_metric__hatted_quantities()***: Defining geometric quantities\n",
     "\n",
-    "Based on the quantities defined in reference_metric.py (actually just the orthogonal scale factors scalefactor_orthog\\[\\]), **reference_metric__hatted_quantities.py** evaluates a number of geometric quantities useful for solving PDEs in curvilinear coordinate systems. We call geometric quantities related to the reference metric \"hatted\" quantities, adopting the nomenclature of Baumgarte (2012). For example, the reference metric itself is defined as $\\hat{g}_{ij}$=ghatDD\\[i\\]\\[j\\]:"
+    "Once scalefactor_orthog\\[\\] has been defined, the function **ref_metric__hatted_quantities()** within reference_metric.py can be called to define a number of geometric quantities useful for solving PDEs in curvilinear coordinate systems. \n",
+    "\n",
+    "Adopting the notation of [Baumgarte, Montero, Cordero-Carrión, and Müller, PRD 87, 044026 (2012)](https://arxiv.org/abs/1211.6632), geometric quantities related to the reference metric are named \"hatted\" quantities, . For example, the reference metric is defined as $\\hat{g}_{ij}$=ghatDD\\[i\\]\\[j\\]:"
    ]
   },
   {
@@ -195,29 +197,120 @@
     }
    ],
    "source": [
-    "import reference_metric__hatted_quantities as rhq\n",
+    "rfm.ref_metric__hatted_quantities()\n",
     "\n",
-    "rhq.reference_metric__hatted_quantities()\n",
-    "\n",
-    "sp.pretty_print(sp.Matrix(sp.simplify(rhq.ghatDD)))"
+    "sp.pretty_print(sp.Matrix(sp.simplify(rfm.ghatDD)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to $\\hat{g}_{ij}$, **reference_metric__hatted_quantities.py** also provides:\n",
+    "In addition to $\\hat{g}_{ij}$, **ref_metric__hatted_quantities()** also provides:\n",
     "* The rescaling \"matrix\" ReDD\\[i\\]\\[j\\], used for separating singular (due to chosen coordinate system) pieces of smooth rank-2 tensor components from the smooth parts, so that the smooth parts can be used within temporal and spatial differential operators.\n",
     "* First and second derivatives of the reference metric: $\\hat{g}_{ij,k}$=ghatDD_dD\\[i\\]\\[j\\]\\[k\\]; $\\hat{g}_{ij,kl}$=ghatDD_dDD\\[i\\]\\[j\\]\\[k\\]\\[l\\]\n",
-    "* Christoffel symbols associated with the reference metric, $\\hat{\\Gamma}^i_{jk}$ = GammahatUDD\\[i\\]\\[j\\]\\[k\\] and their first derivatives $\\hat{\\Gamma}^i_{jk,l}$ = GammahatUDD_dD\\[i\\]\\[j\\]\\[k\\]\\[l\\]\n"
+    "* Christoffel symbols associated with the reference metric, $\\hat{\\Gamma}^i_{jk}$ = GammahatUDD\\[i\\]\\[j\\]\\[k\\] and their first derivatives $\\hat{\\Gamma}^i_{jk,l}$ = GammahatUDD_dD\\[i\\]\\[j\\]\\[k\\]\\[l\\]\n",
+    "\n",
+    "For example, the Christoffel symbol $\\hat{\\Gamma}^{xx_1}_{xx_2 xx_2}$ is given by GammahatUDD\\[1\\]\\[2\\]\\[2\\]:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-sin(2⋅xx₁) \n",
+      "────────────\n",
+      "     2      \n"
+     ]
+    }
+   ],
+   "source": [
+    "sp.pretty_print(sp.simplify(rfm.GammahatUDD[1][2][2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the trigonometric identity $2\\sin(x)\\cos(x) = \\sin(2x)$, notice that the above expression is equivalent to Eq. 18 of [Baumgarte, Montero, Cordero-Carrión, and Müller, PRD 87, 044026 (2012)](https://arxiv.org/abs/1211.6632). This is expected since the sinh-radial spherical coordinate system is equivalent to ordinary spherical coordinates in the angular components."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prescribed reference metrics in reference_metric.py\n",
+    "\n",
+    "One need not manually define scale factors or other quantities for reference metrics, as a number of prescribed reference metrics are already defined in reference_metric.py. These can be accessed by first setting the parameter **reference_metric::CoordSystem** to one of the following, and then calling the function **rfm.reference_metric()**:\n",
+    "* ***Spherical-like coordinate systems***\n",
+    "    * **reference_metric::CoordSystem = \"Spherical\"**: Standard spherical coordinates, with $(r,\\theta,\\phi)=(xx_0,xx_1,xx_2)$\n",
+    "    * **reference_metric::CoordSystem = \"SinhSpherical\"**: Spherical coordinates, but with $$r(xx_0) = \\text{AMPL} \\frac{\\sinh\\left(\\frac{xx_0}{\\text{SINHW}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHW}}\\right)}$$\n",
+    "    * **reference_metric::CoordSystem = \"SinhSphericalv2\"**: Spherical coordinates, but with \n",
+    "    $$r(xx_0) = \\text{AMPL} \\left[\\text{const_dr}\\ xx_0 + \\frac{\\sinh\\left(\\frac{xx_0}{\\text{SINHW}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHW}}\\right)}\\right]$$\n",
+    "* ***Cylindrical-like coordinate systems***\n",
+    "    * **reference_metric::CoordSystem = \"Cylindrical\"**: Standard cylindrical coordinates, with $(\\rho,\\phi,z)=(xx_0,xx_1,xx_2)$\n",
+    "    * **reference_metric::CoordSystem = \"SinhCylindrical\"**: Cylindrical coordinates, but with\n",
+    "    $$\\rho(xx_0) = \\text{AMPLRHO} \\frac{\\sinh\\left(\\frac{xx_0}{\\text{SINHWRHO}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHWRHO}}\\right)}$$\n",
+    "    and \n",
+    "    $$z(xx_2) = \\text{AMPLZ} \\frac{\\sinh\\left(\\frac{xx_2}{\\text{SINHWZ}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHWZ}}\\right)}$$\n",
+    "    \n",
+    "    * **reference_metric::CoordSystem = \"SinhCylindricalv2\"**: Cylindrical coordinates, but with\n",
+    "    $$\\rho(xx_0) = \\text{AMPLRHO} \\left[\\text{const_drho}\\ xx_0 + \\frac{\\sinh\\left(\\frac{xx_0}{\\text{SINHWRHO}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHWRHO}}\\right)}\\right]$$\n",
+    "    and \n",
+    "    $$z(xx_2) = \\text{AMPLZ} \\left[\\text{const_dz}\\ xx_2 + \\frac{\\sinh\\left(\\frac{xx_2}{\\text{SINHWZ}}\\right)}{\\sinh\\left(\\frac{1}{\\text{SINHWZ}}\\right)}\\right]$$\n",
+    "* ***Cartesian coordinate systems***\n",
+    "    * **reference_metric::CoordSystem = \"Cartesian\"**: Standard Cartesian coordinates, with $(x,y,z)=(xx_0,xx_1,xx_2)$\n",
+    "* ***[Prolate spheroidal](https://en.wikipedia.org/wiki/Prolate_spheroidal_coordinates)-like coordinate systems***\n",
+    "    * **reference_metric::CoordSystem = \"SymTP\"**: Symmetric TwoPuncture coordinates, with $(\\rho,\\phi,z)=(xx_0\\sin(xx_1), xx_2, \\sqrt{xx_0^2 + \\text{bScale}^2}\\cos(xx_1))$\n",
+    "    * **reference_metric::CoordSystem = \"SinhSymTP\"**: Symmetric TwoPuncture coordinates, but with $$xx_0 \\to \\sinh(xx_0/\\text{AW})$$\n",
+    "\n",
+    "For example, let's set up SinhCylindricalv2 coordinates and output a Christoffel symbol:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        ⎛ 2⋅xx₂     ⎞    1                            \n",
+      "                        ⎜ ──────    ⎟  ──────                         \n",
+      "                        ⎜ SINHWZ    ⎟  SINHWZ                         \n",
+      "                        ⎝ℯ       - 1⎠⋅ℯ                               \n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "       ⎛                ⎛   2       ⎞   xx₂     ⎛ 2⋅xx₂     ⎞    1   ⎞\n",
+      "       ⎜                ⎜ ──────    ⎟  ──────   ⎜ ──────    ⎟  ──────⎟\n",
+      "       ⎜                ⎜ SINHWZ    ⎟  SINHWZ   ⎜ SINHWZ    ⎟  SINHWZ⎟\n",
+      "SINHWZ⋅⎝SINHWZ⋅const_dz⋅⎝ℯ       - 1⎠⋅ℯ       + ⎝ℯ       + 1⎠⋅ℯ      ⎠\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "import NRPy_param_funcs as par\n",
+    "import reference_metric as rfm\n",
+    "\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"SinhCylindricalv2\")\n",
+    "\n",
+    "rfm.reference_metric()\n",
+    "\n",
+    "sp.pretty_print(sp.simplify(rfm.GammahatUDD[2][2][2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we will soon see, defining these \"hatted\" quantities will be quite useful when expressing hyperbolic ([wave-equation](https://en.wikipedia.org/wiki/Wave_equation)-like) PDEs in non-Cartesian coordinate systems."
+   ]
   }
  ],
  "metadata": {
