improve wording of rfm tut

--- a/Tutorial-Reference_Metric.ipynb
+++ b/Tutorial-Reference_Metric.ipynb
@@ -15,11 +15,9 @@
    "source": [
     "### Why use a reference metric? Benefits of choosing the best coordinate system for the problem\n",
     "\n",
-    "When solving a partial differential equation on the computer, it is useful to first pick a coordinate system well-suited to the physical scenario we are modeling. \n",
+    "When solving a partial differential equation on the computer, it is useful to first pick a coordinate system well-suited to the geometry of the problem. For example, if we are modeling a spherically-symmetric star, it would be hugely wasteful to model the star in 3-dimensional Cartesian coordinates ($x$,$y$,$z$). This is because in Cartesian coordinates, we would need to choose high sampling in all three Cartesian directions. If instead we chose to model the star in spherical coordinates ($r$,$\\theta$,$\\phi$), so long as the star is centered at $r=0$, we would not need to model the star with more than one point in the $\\theta$ and $\\phi$ directions!\n",
     "\n",
-    "For example, if we are modeling a spherically-symmetric star, it would be hugely wasteful to model the star in 3-dimensional Cartesian coordinates ($x$,$y$,$z$). This is because in Cartesian coordinates, we would need to choose high sampling in all three Cartesian directions. If instead we chose to model the star in spherical coordinates ($r$,$\\theta$,$\\phi$), so long as the star is centered at $r=0$, we would not need to model the star in more than one point in the $\\theta$ and $\\phi$ directions!\n",
-    "\n",
-    "The same argument holds for stars that vary slowly in $\\theta$ and $\\phi$ directions (like isolated neutron stars or black holes), in which case the number of points needed to sample the angular directions will still be much smaller than in the radial direction.\n",
+    "A similar argument holds for stars that are *nearly* spherically symmetric. Such stars may exhibit density distributions that vary slowly in $\\theta$ and $\\phi$ directions (e.g., isolated neutron stars or black holes). In these cases the number of points needed to sample the angular directions will still be much smaller than in the radial direction.\n",
     "\n",
     "Thus choice of an appropriate reference metric may directly mitigate the [Curse of Dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality)."
    ]
