reduce clunky notation

--- a/Tutorial-Reference_Metric.ipynb
+++ b/Tutorial-Reference_Metric.ipynb
@@ -209,7 +209,7 @@
     "* First and second derivatives of the reference metric: $\\hat{g}_{ij,k}$=ghatDD_dD\\[i\\]\\[j\\]\\[k\\]; $\\hat{g}_{ij,kl}$=ghatDD_dDD\\[i\\]\\[j\\]\\[k\\]\\[l\\]\n",
     "* Christoffel symbols associated with the reference metric, $\\hat{\\Gamma}^i_{jk}$ = GammahatUDD\\[i\\]\\[j\\]\\[k\\] and their first derivatives $\\hat{\\Gamma}^i_{jk,l}$ = GammahatUDD_dD\\[i\\]\\[j\\]\\[k\\]\\[l\\]\n",
     "\n",
-    "For example, the Christoffel symbol $\\hat{\\Gamma}^{xx_1}_{xx_2 xx_2}$ is given by GammahatUDD\\[1\\]\\[2\\]\\[2\\]:"
+    "For example, the Christoffel symbol $\\hat{\\Gamma}^{xx_1}_{xx_2 xx_2}=\\hat{\\Gamma}^1_{22}$ is given by GammahatUDD\\[1\\]\\[2\\]\\[2\\]:"
    ]
   },
   {
@@ -267,30 +267,14 @@
     "    * **reference_metric::CoordSystem = \"SymTP\"**: Symmetric TwoPuncture coordinates, with $(\\rho,\\phi,z)=(xx_0\\sin(xx_1), xx_2, \\sqrt{xx_0^2 + \\text{bScale}^2}\\cos(xx_1))$\n",
     "    * **reference_metric::CoordSystem = \"SinhSymTP\"**: Symmetric TwoPuncture coordinates, but with $$xx_0 \\to \\sinh(xx_0/\\text{AW})$$\n",
     "\n",
-    "For example, let's set up SinhCylindricalv2 coordinates and output a Christoffel symbol:"
+    "For example, let's set up SinhCylindricalv2 coordinates and output the Christoffel symbol $\\hat{\\Gamma}^{xx_2}_{xx_2 xx_2}$, or more simply $\\hat{\\Gamma}^2_{22}$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        ⎛ 2⋅xx₂     ⎞    1                            \n",
-      "                        ⎜ ──────    ⎟  ──────                         \n",
-      "                        ⎜ SINHWZ    ⎟  SINHWZ                         \n",
-      "                        ⎝ℯ       - 1⎠⋅ℯ                               \n",
-      "──────────────────────────────────────────────────────────────────────\n",
-      "       ⎛                ⎛   2       ⎞   xx₂     ⎛ 2⋅xx₂     ⎞    1   ⎞\n",
-      "       ⎜                ⎜ ──────    ⎟  ──────   ⎜ ──────    ⎟  ──────⎟\n",
-      "       ⎜                ⎜ SINHWZ    ⎟  SINHWZ   ⎜ SINHWZ    ⎟  SINHWZ⎟\n",
-      "SINHWZ⋅⎝SINHWZ⋅const_dz⋅⎝ℯ       - 1⎠⋅ℯ       + ⎝ℯ       + 1⎠⋅ℯ      ⎠\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
