Scalar wave in curvi coords tutorial

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "We wish to numerically solve the scalar wave equation in Cartesian coordinates:\n",
     "$$\\partial_t^2 u = c^2 \\nabla^2 u \\text{,}$$\n",
-    "where $u$ is a function of time and space: $u = u(t,x,y,...)$ (spatial dimension as-yet unspecified) and $c$ is the wave speed,\n",
+    "where $u$ (the amplitude of the wave) is a function of time and space: $u = u(t,x,y,...)$ (spatial dimension as-yet unspecified) and $c$ is the wave speed,\n",
     "\n",
     "subject to some initial condition\n",
     "$$u(0,x,y,...) = f(x,y,...)$$\n",
