--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -27,16 +27,19 @@
     "Though it was originally designed to greatly simplify the [writing of codes to solve Einstein's equations of general relativity on the computer](https://en.wikipedia.org/wiki/Numerical_relativity), **NRPy+** can be used to rapidly develop codes to solve any number of [hyperbolic](https://en.wikipedia.org/wiki/Hyperbolic_partial_differential_equation) and [parabolic](https://en.wikipedia.org/wiki/Parabolic_partial_differential_equation) partial differential equations with finite difference approaches.\n",
     "\n",
     "## Interactive NRPy+ Jupyter Notebook Tutorials\n",
-    "#### (READ FIRST, IN ORDER) Basic functionality of NRPy+\n",
+    "#### (READ FIRST, IN ORDER) Basic functionality of NRPy+; Scalar Wave Equation in Cartesian Coordinates\n",
     "+ #### [Basic C Code Output, NRPy+'s Parameter Interface](Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "+ #### [Numerical Grids](Tutorial-Numerical_Grids.ipynb)\n",
     "+ #### [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ #### [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
-    "+ #### [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
     "\n",
-    "#### (READ SECOND, IN ORDER) Worked Examples\n",
-    "+ #### [The Scalar Wave Equation (Cartesian Coordinates)](Tutorial-ScalarWave.ipynb)\n",
-    "+ #### [The Scalar Wave Equation in Curvilinear Coordinates](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
+    "+ #### Application: [The Scalar Wave Equation in Cartesian Coordinates](Tutorial-ScalarWave.ipynb)\n",
+    "\n",
+    "#### (READ SECOND, IN ORDER) Reference Metrics and the Scalar Wave Equation in Curvilinear Coordinates\n",
+    "+ #### [Moving beyond Cartesian Grids: Reference Metrics](Tutorial-Reference_Metric.ipynb)\n",
+    "+ #### Application: [The Scalar Wave Equation in Curvilinear Coordinates, using a Reference Metric](Tutorial-ScalarWaveCurvilinear.ipynb)\n",
+    "\n",
+    "#### (READ THIRD) Solving Einstein's Equations in Curvilinear Coordinates\n",
     "+ #### (coming soon) General Relativity in the BSSN Formalism, Moving Puncture Gauge]\n",
     "    + *In the meantime: commented NRPy+ module source codes [BSSN_RHSs.py](https://bitbucket.org/zach_etienne/nrpy/src/master/BSSN_RHSs.py?mode=edit&spa=0), which depends on [ref_metric__hatted_quantities.py](https://bitbucket.org/zach_etienne/nrpy/src/master/ref_metric__hatted_quantities.py?mode=edit&spa=0)* (Disclaimer: this source code is from the original version of NRPy+; still needs to be ported to the latest version.)"
    ]
